# make-page

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  start_services.sh  stop_services.sh  代码架构设计.md  需求整理.md
.claude/: settings.local.json
backend/: main.py  pyproject.toml  schemas.py
backend/llm_providers/: base_llm.py  google_gemini_llm.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ContentAnalysisPanel.jsx  ContentBlockInput.jsx  ContentSummary.jsx  EditableOutput.jsx  FusionDegreeSelector.jsx  KeywordTags.jsx  LLMSelector.jsx  LanguageSelector.jsx  MindMap.jsx  ObsidianImporter.jsx  ThemeModal.jsx
frontend/src/contexts/: LanguageContext.jsx
frontend/src/utils/: htmlStyles.js  themes.js
