[project]
name = "make-page-backend"
version = "0.1.0"
description = "AI Content Weaver Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "google-generativeai>=0.8.0",
    "httpx>=0.25.0",
    "pillow>=10.0.0",
    "markdown-it-py>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []